rpc: add rpc support for order metrics and batch metrics
